# ai-data-analysis

./: .env.example  .gitignore  AGENTS.md  AUTH_SETUP.md  Procfile  README.md  app.py  expenses_analysis.html  expenses_analysis.ipynb  generate_password.py  hash_password.py  main.py  nixpacks.toml  pyproject.toml  run_local.sh  test_sheets_connection.py
.positai/skills/heatmap-table/: SKILL.md
experiments/expenses/: main.py
experiments/expenses/data/: expenses.csv
experiments/expenses/docs/: AUTH_SETUP.md
experiments/expenses/notebooks/: expenses_analysis.html  expenses_analysis.ipynb
experiments/expenses/streamlit/: app.py  run_local.sh  test_sheets_connection.py
experiments/r/: README.md
experiments/r/project-template/: .Rprofile  analysis.R
experiments/r/project-template/config/: .env.example
experiments/r/projects/ai-positron-databot/: AGENTS.md  README.md  expenses-analysis.html  expenses-analysis.qmd
experiments/r/projects/ai-positron-databot/R/: helpers.R
experiments/r/projects/ai-positron-reviewer/: README.md  reviewer.R
