[project]
name = "ai-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "streamlit>=1.43.0",
]

[dependency-groups]
dev = [
    "nbdime>=4.0.3",
]
